Ajout des Formations

--- a/home.html
+++ b/home.html
@@ -37,13 +37,41 @@
         <h2>Etudiant en informatique</h2>
         <div class="bio">
             <h3>Bio</h3>
-            <p>Etudiant en 3<sup>ème</sup> année de licence d'informatique, je suis actuellement à la recherche d'un <strong>stage</strong> en tant que <strong>développeur</strong>.
-            <br/><br/><strong>Motivé</strong> par l'envie de développer mes compétences, je serais ravis de pouvoir participer à la <strong>conception</strong> et au développement d'une solution numerique.</p>
+            <p>Etudiant en 3<sup>ème</sup> année de licence d'informatique, je suis actuellement à la recherche d'un <strong>stage</strong> en tant que <strong>développeur</strong>.</p>
+             <p><strong>Motivé</strong> par l'envie de développer mes compétences, je serais ravis de pouvoir participer à la <strong>conception</strong> et au développement d'une solution numerique.</p>
         </div>
     </div>
     
     <div class="deuxieme">
-        
+        <h3>Formations</h3>
+        <div class="formations">
+            <div class="formation" id="inter">
+                <div class="imgFormations">
+                    <img src="./Images/FormationsLogo/Univ-Tours.png" class="formationsLogo">
+                </div>
+                <div class="formation-details">
+                    <h3 class="formation-titre">Licence Informatique</h3>
+                    <span class="annees">2020-2023 (en cours)</span>
+                    <p class="formation-lieu">Université de Tours</p>
+                </div>
+            </div>
+
+            <div class="formation">
+                <div class="imgFormations">
+                    <img src="./Images/FormationsLogo/LeonardDeVinci_Amboise.png" class="formationsLogo">
+                </div>
+                <div class="formation-details">
+                    <h3 class="formation-titre">Bac Scientifique</h3>
+                    <span class="annees">2020</span>
+                    <p class="formation-lieu">Lycée Léonard de Vinci</p>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="footer">
+
     </div>
 
 </body>
