Ajout sous-section : Soft Skills

--- a/home.html
+++ b/home.html
@@ -47,10 +47,11 @@
     <div class="competences">
         <div class="formations-titre"><h3>Compétences</h3></div>
         <div class="compétences pro">
+            <div class="formations-titre"><h4 class="titreLangue">Techniques</h4></div>
         <div class="competenceDétail">
             <div class="competenceMain">
                 <div class="compétenceLogo">
-                    <img class="competenceImg" src="./Images/Compétences/java.png" alt="">
+                    <img class="competenceImg" src="./Images/Competences/java.png" alt="">
                 </div>
                 <h4 class="titreCompetence">Java</h4>
             </div>
@@ -60,7 +61,7 @@
         <div class="competenceDétail">
             <div class="competenceMain">
                 <div class="compétenceLogo">
-                    <img class="competenceImg" src="./Images/Compétences/html-5.png" alt="">
+                    <img class="competenceImg" src="./Images/Competences/html-5.png" alt="">
                 </div>
                 <h4 class="titreCompetence">HTML / CSS</h4>
             </div>
@@ -70,7 +71,7 @@
         <div class="competenceDétail">
             <div class="competenceMain">
                 <div class="compétenceLogo">
-                    <img class="competenceImg" src="./Images/Compétences/php.png" alt="">
+                    <img class="competenceImg" src="./Images/Competences/php.png" alt="">
                 </div>
                 <h4 class="titreCompetence">PHP et SQL</h4>
             </div>
@@ -89,7 +90,7 @@
             <progress min="0" max="100" value="75"></progress>
         </div>
 
-        <div class="competenceDétail" id="last">
+        <div class="competenceDétail">
             <div class="competenceMain">
                 <div class="compétenceLogo">
                     <img class="langueImg" src="./Images/Langues/italy.png" alt="">
@@ -98,7 +99,15 @@
             </div>
             <progress min="0" max="100" value="95"></progress>
         </div>
-        
+        <div class="skills">
+        <div class="formations-titre"><h4 class="titreLangue">Relationnelles</h4></div>
+        <div class="softskills">
+            <div class="skill"><span class="titreSkill">Autonome</span></div>
+            <div class="skill" id="bas"><span class="titreSkill">Esprit</span><span class="titreSkill">d'équipe</span></div>
+            <div class="skill" id="equipe"><span class="titreSkill">Flexible</span></div>
+
+        </div>
+        </div>
         </div>
         
     </div>
