--- a/home.html
+++ b/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html id="wrapper">
 
 <head>
     <meta charset="utf-8">
@@ -29,195 +29,211 @@
         </div>
     </div>
 
-    <div class="premiere">
-        <div class="profil">
-            <img src="./Images/moi.jpg" class="photoProfil">
+    <div class="premiere" id="sidebar">
+        <div class="titres-premier">
+            <div class="profil">
+                <img src="./Images/moi.jpg" class="photoProfil">
+            </div>
+            <h1>Henri Cossais</h1>
+            <h2>Etudiant en informatique</h2>
+            <a href="./Telechargements/CV_Henri_COSSAIS.pdf" download="CV_Henri_COSSAIS"><button class="cv">TELECHARGER
+                    MON
+                    CV</button></a>
         </div>
-        <h1>Henri Cossais</h1>
-        <h2>Etudiant en informatique</h2>
-        <a href="./Telechargements/CV_Henri_COSSAIS.pdf" download="CV_Henri_COSSAIS"><button class="cv">TELECHARGER MON
-                CV</button></a>
+
         <div class="bio">
             <h3>Bio</h3>
             <p>Etudiant en 3<sup>ème</sup> année de licence d'informatique, je suis actuellement à la recherche d'un
                 <strong>stage</strong> en tant que <strong>développeur</strong>.
             </p>
             <p id="last"><strong>Motivé</strong> par l'envie de développer mes compétences, je serais ravis de pouvoir
-                participer à la <strong>conception</strong> et au développement d'une solution numerique.</p>
+                participer à la <strong>conception</strong> et au développement de solutions numeriques.</p>
         </div>
     </div>
 
-
-    <div class="competences">
-        <div class="formations-titre">
-            <h3>Compétences</h3>
-        </div>
-        <div class="compétences pro">
-            <div class="formations-titre">
-                <h4 class="titreLangue">Techniques</h4>
-            </div>
-            <div class="competenceDétail">
-                <div class="competenceMain">
-                    <div class="compétenceLogo">
-                        <img class="competenceImg" src="./Images/Competences/java.png" alt="">
-                    </div>
-                    <h4 class="titreCompetence">Java</h4>
-                </div>
-                <progress min="0" max="100" value="70"></progress>
-            </div>
-
-            <div class="competenceDétail">
-                <div class="competenceMain">
-                    <div class="compétenceLogo">
-                        <img class="competenceImg" src="./Images/Competences/html-5.png" alt="">
-                    </div>
-                    <h4 class="titreCompetence">HTML / CSS</h4>
-                </div>
-                <progress min="0" max="100" value="85"></progress>
-            </div>
-
-            <div class="competenceDétail">
-                <div class="competenceMain">
-                    <div class="compétenceLogo">
-                        <img class="competenceImg" src="./Images/Competences/php.png" alt="">
-                    </div>
-                    <h4 class="titreCompetence">PHP et SQL</h4>
-                </div>
-                <progress min="0" max="100" value="40"></progress>
-            </div>
-
-            <div class="formations-titre">
-                <h4 class="titreLangue">Langues</h4>
-            </div>
-
-            <div class="competenceDétail">
-                <div class="competenceMain">
-                    <div class="compétenceLogo">
-                        <img class="langueImg" src="./Images/Langues/united-kingdom.png" alt="">
-                    </div>
-                    <h4 class="titreCompetence">Anglais</h4>
-                </div>
-                <progress min="0" max="100" value="75"></progress>
-            </div>
-
-            <div class="competenceDétail">
-                <div class="competenceMain">
-                    <div class="compétenceLogo">
-                        <img class="langueImg" src="./Images/Langues/italy.png" alt="">
-                    </div>
-                    <h4 class="titreCompetence">Italien</h4>
-                </div>
-                <progress min="0" max="100" value="95"></progress>
-            </div>
-            <div class="skills">
+    <div id="content">
+        <div class="compétences-formations">
+            <div class="competences">
                 <div class="formations-titre">
-                    <h4 class="titreLangue">Relationnelles</h4>
+                    <h3>Compétences</h3>
                 </div>
-                <div class="softskills">
-                    <div class="skill"><span class="titreSkill">Autonome</span></div>
-                    <div class="skill" id="bas"><span class="titreSkill">Esprit</span><span
-                            class="titreSkill">d'équipe</span></div>
-                    <div class="skill" id="equipe"><span class="titreSkill">Flexible</span></div>
+                <div class="compétences pro">
+                    <div class="formations-titre">
+                        <h4 class="titreLangue">Techniques</h4>
+                    </div>
+                    <div class="competenceDétail">
+                        <div class="competenceMain">
+                            <div class="compétenceLogo">
+                                <img class="competenceImg" src="./Images/Competences/java.png" alt="">
+                            </div>
+                            <h4 class="titreCompetence">Java</h4>
+                        </div>
+                        <progress min="0" max="100" value="70"></progress>
+                    </div>
+
+                    <div class="competenceDétail">
+                        <div class="competenceMain">
+                            <div class="compétenceLogo">
+                                <img class="competenceImg" src="./Images/Competences/html-5.png" alt="">
+                            </div>
+                            <h4 class="titreCompetence">HTML / CSS</h4>
+                        </div>
+                        <progress min="0" max="100" value="85"></progress>
+                    </div>
+
+                    <div class="competenceDétail">
+                        <div class="competenceMain">
+                            <div class="compétenceLogo">
+                                <img class="competenceImg" src="./Images/Competences/php.png" alt="">
+                            </div>
+                            <h4 class="titreCompetence">PHP et SQL</h4>
+                        </div>
+                        <progress min="0" max="100" value="40"></progress>
+                    </div>
+
+                    <div class="formations-titre">
+                        <h4 class="titreLangue">Langues</h4>
+                    </div>
+
+                    <div class="competenceDétail">
+                        <div class="competenceMain">
+                            <div class="compétenceLogo">
+                                <img class="langueImg" src="./Images/Langues/united-kingdom.png" alt="">
+                            </div>
+                            <h4 class="titreCompetence">Anglais</h4>
+                        </div>
+                        <progress min="0" max="100" value="75"></progress>
+                    </div>
+
+                    <div class="competenceDétail">
+                        <div class="competenceMain">
+                            <div class="compétenceLogo">
+                                <img class="langueImg" src="./Images/Langues/italy.png" alt="">
+                            </div>
+                            <h4 class="titreCompetence">Italien</h4>
+                        </div>
+                        <progress min="0" max="100" value="95"></progress>
+                    </div>
+                    <div class="skills">
+                        <div class="formations-titre">
+                            <h4 class="titreLangue">Relationnelles</h4>
+                        </div>
+                        <div class="softskills">
+                            <div class="skill"><span class="titreSkill">Autonome</span></div>
+                            <div class="skill" id="bas"><span class="titreSkill">Esprit</span><span
+                                    class="titreSkill">d'équipe</span></div>
+                            <div class="skill" id="equipe"><span class="titreSkill">Flexible</span></div>
+
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+
+
+            <div class="deuxieme">
+                <div class="formations-titre">
+                    <h3>Formations</h3>
+                </div>
+                <div class="formations">
+                    <div class="formation" id="first">
+                        <div class="imgFormations">
+                            <img src="./Images/FormationsLogo/Univ-Tours.png" class="formationsLogo">
+                        </div>
+                        <div class="formation-details">
+                            <h3 class="formation-titre">Licence Informatique</h3>
+                            <span class="annees">2020-2023 (en cours)</span>
+                            <p class="formation-lieu">Université de Tours</p>
+                            <span>Voir plus</span>
+                        </div>
+                    </div>
+
+                    <div class="formation" id="last">
+                        <div class="imgFormations">
+                            <img src="./Images/FormationsLogo/LeonardDeVinci_Amboise.png" class="formationsLogo">
+                        </div>
+                        <div class="formation-details">
+                            <h3 class="formation-titre">Bac Scientifique</h3>
+                            <span class="annees">2020</span>
+                            <p class="formation-lieu">Lycée Léonard de Vinci</p>
+                            <span>Voir plus</span>
+                        </div>
+                    </div>
 
                 </div>
             </div>
         </div>
+        <div class="projets">
+            <div class="formations-titre">
+                <h3 class="h3-projets">Projets</h3>
+            </div>
+            <div class="projets-github"><span class="projet-span">Lien vers mon github :</span>
+                <div class="logoGit"><a class="gitlink" href="https://github.com/iPerionn" target="_blank"><img
+                            class="imgGit" src="./Images/Projets/github.png" alt=""></a></div>
+            </div>
+            <div class="projet-liste">
+                <div class="duo-projet">
+                    <div class="projet">
+                        <div class="titre-projet">
+                            <h3 class="h3-projet">Site de quiz en ligne :</h3>
+                        </div>
+                        <div class="techno">
+                            <ul>
+                                <li>Utilisation du framework <strong>Symfony</strong></li>
+                                <li>Base de donnée <strong>MySQL</strong></li>
+                                <li>Versionning <strong>Git</strong></li>
+                            </ul>
+                        </div>
+                    </div>
 
-    </div>
+                    <div class="projet">
+                        <div class="titre-projet">
+                            <h3 class="h3-projet">Site personnel type CV</h3>
+                        </div>
+                        <div class="techno">
+                            <ul>
+                                <li>Utilisation de <strong>HTML5 / CSS3</strong></li>
+                                <li>Hébergement chez OVH</li>
+                            </ul>
+                        </div>
+                    </div>
 
-
-
-    <div class="deuxieme">
-        <div class="formations-titre">
-            <h3>Formations</h3>
-        </div>
-        <div class="formations">
-            <div class="formation" id="first">
-                <div class="imgFormations">
-                    <img src="./Images/FormationsLogo/Univ-Tours.png" class="formationsLogo">
                 </div>
-                <div class="formation-details">
-                    <h3 class="formation-titre">Licence Informatique</h3>
-                    <span class="annees">2020-2023 (en cours)</span>
-                    <p class="formation-lieu">Université de Tours</p>
-                    <span>Voir plus</span>
+                <div class="duo-projet">
+
+                    <div class="projet">
+                        <div class="titre-projet">
+                            <h3 class="h3-projet">Application d'organisation de livraisons :</h3>
+                        </div>
+                        <div class="techno">
+                            <ul>
+                                <li>Utilisation de <strong>Java</strong> et JavaFX</li>
+                                <li>Implémentation du pattern MVC</li>
+                                <li>Base de donnée MySQL</li>
+                            </ul>
+                        </div>
+                    </div>
+
+
+
+                    <div class="projet">
+                        <div class="titre-projet">
+                            <h3 class="h3-projet">Bot Discord</h3>
+                        </div>
+                        <div class="techno">
+                            <ul id="last">
+                                <li>Utilisation de <strong>Discord.js</strong><br>(librairie <strong>node.js</strong>
+                                    pour
+                                    intéragir
+                                    avec l'API Discord)</li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
 
-            <div class="formation" id="last">
-                <div class="imgFormations">
-                    <img src="./Images/FormationsLogo/LeonardDeVinci_Amboise.png" class="formationsLogo">
-                </div>
-                <div class="formation-details">
-                    <h3 class="formation-titre">Bac Scientifique</h3>
-                    <span class="annees">2020</span>
-                    <p class="formation-lieu">Lycée Léonard de Vinci</p>
-                    <span>Voir plus</span>
-                </div>
-            </div>
-
         </div>
-    </div>
-
-    <div class="projets">
-        <div class="formations-titre">
-            <h3 class="h3-projets">Projets</h3>
-        </div>
-        <div class="projets-github"><span class="projet-span">Lien vers mon github :</span>
-            <div class="logoGit"><a class="gitlink" href="https://github.com/iPerionn" target="_blank"><img
-                        class="imgGit" src="./Images/Projets/github.png" alt=""></a></div>
-        </div>
-
-        <div class="projet">
-            <div class="titre-projet">
-                <h3 class="h3-projet">Site de quiz en ligne :</h3>
-            </div>
-            <div class="techno">
-                <ul>
-                    <li>Utilisation du framework <strong>Symfony</strong></li>
-                    <li>Base de donnée <strong>MySQL</strong></li>
-                    <li>Versionning <strong>Git</strong></li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="projet">
-            <div class="titre-projet">
-                <h3 class="h3-projet">Application d'organisation de livraisons :</h3>
-            </div>
-            <div class="techno">
-                <ul>
-                    <li>Utilisation de <strong>Java</strong> et JavaFX</li>
-                    <li>Implémentation du pattern MVC</li>
-                    <li>Base de donnée MySQL</li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="projet">
-            <div class="titre-projet">
-                <h3 class="h3-projet">Site personnel type CV</h3>
-            </div>
-            <div class="techno">
-                <ul>
-                    <li>Utilisation de <strong>HTML5 / CSS3</strong></li>
-                    <li>Hébergement chez OVH</li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="projet">
-            <div class="titre-projet">
-                <h3 class="h3-projet">Bot Discord</h3>
-            </div>
-            <div class="techno">
-                <ul id="last">
-                    <li>Utilisation de <strong>Discord.js</strong><br>(librairie <strong>node.js</strong> pour intéragir
-                        avec l'API Discord)</li>
-                </ul>
-            </div>
-        </div>
-
     </div>
 
     <div class="footer">
