Modifications mineures du design

--- a/home.html
+++ b/home.html
@@ -43,10 +43,12 @@
 
         <div class="bio">
             <h3>Bio</h3>
-            <p>Etudiant en 3<sup>ème</sup> année de licence d'informatique, je suis actuellement à la recherche d'un
+            <p class="bioDetails">Etudiant en 3<sup>ème</sup> année de licence d'informatique, je suis actuellement à la
+                recherche d'un
                 <strong>stage</strong> en tant que <strong>développeur</strong>.
             </p>
-            <p id="last"><strong>Motivé</strong> par l'envie de développer mes compétences, je serais ravis de pouvoir
+            <p class="bioDetails" id="last"><strong>Motivé</strong> par l'envie de développer mes compétences, je serais
+                ravis de pouvoir
                 participer à la <strong>conception</strong> et au développement de solutions numeriques.</p>
         </div>
     </div>
@@ -145,7 +147,6 @@
                             <h3 class="formation-titre">Licence Informatique</h3>
                             <span class="annees">2020-2023 (en cours)</span>
                             <p class="formation-lieu">Université de Tours</p>
-                            <span>Voir plus</span>
                         </div>
                     </div>
 
@@ -156,8 +157,10 @@
                         <div class="formation-details">
                             <h3 class="formation-titre">Bac Scientifique</h3>
                             <span class="annees">2020</span>
-                            <p class="formation-lieu">Lycée Léonard de Vinci</p>
-                            <span>Voir plus</span>
+                            <p class="formation-lieu">Lycée Léonard de Vinci <br> Amboise, FRANCE</p>
+                            <p class="details-formation">Mention : Bien <br> Spécialité :
+                                Mathématiques <br> Section Euro :
+                                Anglais</p>
                         </div>
                     </div>
 
