--- a/home.html
+++ b/home.html
@@ -32,13 +32,13 @@
     <div class="premiere" id="sidebar">
         <div class="titres-premier">
             <div class="profil">
-                <img src="./Images/moi.jpg" class="photoProfil">
+                <img src="./Images/moi.png" class="photoProfil">
             </div>
             <h1>Henri Cossais</h1>
             <h2>Etudiant en informatique</h2>
-            <a href="./Telechargements/CV_Henri_COSSAIS.pdf" download="CV_Henri_COSSAIS"><button class="cv">TELECHARGER
-                    MON
-                    CV</button></a>
+            <a class="dl" href="./Telechargements/CV_Henri_COSSAIS.pdf" download="CV_Henri_COSSAIS">
+                <div class="cv">TELERCHARGER MON CV</div>
+            </a>
         </div>
 
         <div class="bio">
@@ -70,7 +70,7 @@
                             </div>
                             <h4 class="titreCompetence">Java</h4>
                         </div>
-                        <progress min="0" max="100" value="70"></progress>
+                        <progress max="100" value="80"></progress>
                     </div>
 
                     <div class="competenceDétail">
@@ -80,7 +80,7 @@
                             </div>
                             <h4 class="titreCompetence">HTML / CSS</h4>
                         </div>
-                        <progress min="0" max="100" value="85"></progress>
+                        <progress max="100" value="90"></progress>
                     </div>
 
                     <div class="competenceDétail">
@@ -90,7 +90,7 @@
                             </div>
                             <h4 class="titreCompetence">PHP et SQL</h4>
                         </div>
-                        <progress min="0" max="100" value="40"></progress>
+                        <progress max="100" value="65"></progress>
                     </div>
 
                     <div class="formations-titre">
@@ -104,7 +104,7 @@
                             </div>
                             <h4 class="titreCompetence">Anglais</h4>
                         </div>
-                        <progress min="0" max="100" value="75"></progress>
+                        <progress max="100" value="75"></progress>
                     </div>
 
                     <div class="competenceDétail">
@@ -114,7 +114,7 @@
                             </div>
                             <h4 class="titreCompetence">Italien</h4>
                         </div>
-                        <progress min="0" max="100" value="95"></progress>
+                        <progress max="100" value="95"></progress>
                     </div>
                     <div class="skills">
                         <div class="formations-titre">
