--- a/home.html
+++ b/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html id="wrapper">
+<html lang="fr" id="wrapper">
 
 <head>
     <meta charset="utf-8">
@@ -12,19 +12,19 @@
 <body>
     <div class="navBar">
         <div class="navButton">
-            <img class="navIcons" src="./Images/Icons/Nav/comment-info (2).svg" alt="">
+            <img class="navIcons" src="./Images/Icons/Nav/comment-info.svg" alt="">
             <span class="iconLabel">Compétences</span>
         </div>
         <div class="navButton">
-            <img class="navIcons" src="./Images/Icons/Nav/briefcase (2).svg" alt="">
+            <img class="navIcons" src="./Images/Icons/Nav/briefcase.svg" alt="">
             <span class="iconLabel">Experiences</span>
         </div>
         <div class="navButton">
-            <img class="navIcons" src="./Images/Icons/Nav/diploma (2).svg" alt="">
+            <img class="navIcons" src="./Images/Icons/Nav/diploma.svg" alt="">
             <span class="iconLabel">Formations</span>
         </div>
         <div class="navButton">
-            <img class="navIcons" src="./Images/Icons/Nav/book-alt (2).svg" alt="">
+            <img class="navIcons" src="./Images/Icons/Nav/book-alt.svg" alt="">
             <span class="iconLabel">Loisirs</span>
         </div>
     </div>
@@ -32,7 +32,7 @@
     <div class="premiere" id="sidebar">
         <div class="titres-premier">
             <div class="profil">
-                <img src="./Images/moi.png" class="photoProfil">
+                <img src="./Images/moi.png" class="photoProfil" alt="Photo de Henri">
             </div>
             <h1>Henri Cossais</h1>
             <h2>Etudiant en informatique</h2>
@@ -141,7 +141,7 @@
                 <div class="formations">
                     <div class="formation" id="first">
                         <div class="imgFormations">
-                            <img src="./Images/FormationsLogo/Univ-Tours.png" class="formationsLogo">
+                            <img src="./Images/FormationsLogo/Univ-Tours.png" class="formationsLogo" alt="">
                         </div>
                         <div class="formation-details">
                             <h3 class="formation-titre">Licence Informatique</h3>
@@ -152,7 +152,7 @@
 
                     <div class="formation" id="last">
                         <div class="imgFormations">
-                            <img src="./Images/FormationsLogo/LeonardDeVinci_Amboise.png" class="formationsLogo">
+                            <img src="./Images/FormationsLogo/LeonardDeVinci_Amboise.png" class="formationsLogo" alt="">
                         </div>
                         <div class="formation-details">
                             <h3 class="formation-titre">Bac Scientifique</h3>
