--- a/home.html
+++ b/home.html
@@ -5,7 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="styles.css">
-    <title>CV en ligne</title>
+    <link rel="shortcut icon" href="./Images/moustache.png" />
+    <!--Pour la appareils Apple-->
+    <link rel="apple-touch-icon" href="./Images/moustache.png" />
+    <title>Henri Cossais - Recherche de stage</title>
 </head>
 
 
