Nouveau Background / Nouvelle couleur de Titre

--- a/home.html
+++ b/home.html
@@ -195,12 +195,14 @@
 
                     <div class="projet">
                         <div class="titre-projet">
-                            <h3 class="h3-projet">Site personnel type CV</h3>
+                            <h3 class="h3-projet">Langage de programmation</h3>
                         </div>
                         <div class="techno">
-                            <ul>
-                                <li>Utilisation de <strong>HTML5 / CSS3</strong></li>
-                                <li>Hébergement chez OVH</li>
+                            <ul id="last">
+                                <li>
+                                    <strong>Création</strong> et <strong>implémentation</strong> d'un langage pour paramétrer les niveaux d'un jeu
+                                </li>
+                                <li>Utilisation de <strong>Java</strong></li>
                             </ul>
                         </div>
                     </div>
@@ -221,21 +223,21 @@
                         </div>
                     </div>
 
-
-
                     <div class="projet">
                         <div class="titre-projet">
-                            <h3 class="h3-projet">Bot Discord</h3>
+                            <h3 class="h3-projet">Site personnel type CV</h3>
                         </div>
                         <div class="techno">
-                            <ul id="last">
-                                <li>Utilisation de <strong>Discord.js</strong><br>(librairie <strong>node.js</strong>
-                                    pour
-                                    intéragir
-                                    avec l'API Discord)</li>
+                            <ul>
+                                <li>Utilisation de <strong>HTML5 / CSS3</strong></li>
+                                <li>Hébergement chez OVH</li>
                             </ul>
                         </div>
                     </div>
+
+                    
+
+
                 </div>
             </div>
 
